--- a/ingest/pyproject.toml
+++ b/ingest/pyproject.toml
@@ -13,6 +13,8 @@ pydantic = "^2.4.2"
 python-dotenv = "^1.0.0"
 flask = "^3.1.0"
 flask-cors = "^5.0.0"
+flask-sqlalchemy = "^3.1.1"
+psycopg2-binary = "^2.9.10"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
