--- a/ingest/pyproject.toml
+++ b/ingest/pyproject.toml
@@ -15,6 +15,7 @@ flask = "^3.1.0"
 flask-cors = "^5.0.0"
 flask-sqlalchemy = "^3.1.1"
 psycopg2-binary = "^2.9.10"
+flask-migrate = "^4.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
