--- a/ingest/pyproject.toml
+++ b/ingest/pyproject.toml
@@ -16,6 +16,7 @@ flask-cors = "^5.0.0"
 flask-sqlalchemy = "^3.1.1"
 psycopg2-binary = "^2.9.10"
 flask-migrate = "^4.1.0"
+paho-mqtt = "^2.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
