--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
@@ -36,6 +37,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
     "lucide-react": "^0.309.0",
+    "mapbox-gl": "^3.11.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
