--- a/ingest/pyproject.toml
+++ b/ingest/pyproject.toml
@@ -17,6 +17,8 @@ flask-sqlalchemy = "^3.1.1"
 psycopg2-binary = "^2.9.10"
 flask-migrate = "^4.1.0"
 paho-mqtt = "^2.1.0"
+pandas = "^2.2.3"
+numpy = "^2.2.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
