--- a/ingest/pyproject.toml
+++ b/ingest/pyproject.toml
@@ -15,6 +15,7 @@ psycopg2-binary = "^2.9.10"
 paho-mqtt = "^2.1.0"
 pandas = "^2.2.3"
 numpy = "^2.2.4"
+sqlalchemy = "^2.0.40"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
