--- a/ingest/pyproject.toml
+++ b/ingest/pyproject.toml
@@ -16,6 +16,9 @@ paho-mqtt = "^2.1.0"
 pandas = "^2.2.3"
 numpy = "^2.2.4"
 sqlalchemy = "^2.0.40"
+joblib = "^1.4.2"
+requests = "^2.32.3"
+scikit-learn = "^1.6.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
