--- a/web/package.json
+++ b/web/package.json
@@ -42,10 +42,12 @@
     "mapbox-gl": "^3.11.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-clock": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
     "react-superstore": "^0.1.4",
+    "react-time-picker": "^7.0.0",
     "recharts": "^2.15.3",
     "sonner": "^1.7.1",
     "tailwind-animate": "^0.2.10",
